# handwrittendigits

./: .gitignore  Cargo.toml  Cargo.toml~  README.md
src/: augmentation.rs  image_io.rs  loadmnist.rs  main.rs  regression.rs
