[package]
name = "reconhecimento_letras"
version = "0.1.0"
authors = ["caio <oliveiracaio1@yandex.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0"
ndarray = "*"
ndarray-rand = "0.9"
rand = "0.8.3"
lazy_static = "1.3"
byteorder = "1.3"